путь картинок поменял

--- a/razorstock/index.html
+++ b/razorstock/index.html
@@ -12,7 +12,7 @@
       <header class="header">
         <section class="row1">
           <div class="logo">
-            <img src="../img/logo.png" alt="Логотип" />
+            <img src="img/logo.png" alt="Логотип" />
           </div>
           <div class="logreg">
             <a class="logreg-link" href="#">Вход</a>
@@ -22,28 +22,28 @@
             <ul class="contacts-table">
               <li class="contacts-table-list">
                 <a href="mailto:sale@razorstock.com" title="Написать на Email"
-                  ><img src="../img/icon-email.png" alt="E-mail" />&nbsp;<span
+                  ><img src="img/icon-email.png" alt="E-mail" />&nbsp;<span
                     >sale@razorstock.com</span
                   ></a
                 >
               </li>
               <li class="contacts-table-list">
                 <a href="tel://+79375775766" title="Позвонить"
-                  ><img src="../img/icon-phone.png" alt="Телефон" />
+                  ><img src="img/icon-phone.png" alt="Телефон" />
                   <span>+7-937-577-57-66</span></a
                 >
               </li>
               <li class="contacts-table-list">
                 <a href="#" title="Заказать обратный звонок"
                   ><img
-                    src="../img/icon-call.png"
+                    src="img/icon-call.png"
                     alt="Заказать обратный звонок"
                   />&nbsp;<span> Перезвоните мне</span></a
                 >
               </li>
               <li class="contacts-table-list">
                 <a href="skype:razorstock?chat" title="Написать в Skype"
-                  ><img src="../img/icon-skype.png" alt="Skype" />&nbsp;<span>
+                  ><img src="img/icon-skype.png" alt="Skype" />&nbsp;<span>
                     razorstock</span
                   ></a
                 >
@@ -67,7 +67,7 @@
           <div class="cart">
             <div class="cart-empty">
               <a href="#" class="cart-link">
-                <img src="../img/cart.svg" alt="Корзина" />
+                <img src="img/cart.svg" alt="Корзина" />
                 <span>К сожалению,<br />Ваша корзина пуста.</span>
               </a>
             </div>
