--- a/brightlights/index.html
+++ b/brightlights/index.html
@@ -516,7 +516,7 @@
               class="footer__wrap_social_link link"
               href="#"
               target="_black"
-              title="YouTtube"
+              title="YouTube"
             >
               <div class="footer__wrap_social_link_decorcircle">
                 <img
